fix clip-path clipping points and line box-shadows

--- a/src/components/TimeChart/TimeChart.module.css
+++ b/src/components/TimeChart/TimeChart.module.css
@@ -2,7 +2,8 @@
 	display: grid;
 
 	[data-areas-layer],
-	[data-lines-layer] {
+	[data-lines-layer],
+	[data-points-layer] {
 		clip-path: url(#chart-clip-path);
 	}
 
